style.css
*{
    box-sizing: border-box;
}

body{
    margin:0;
    padding:0;
}

.wrapper{
    min-height:100vh;

}

button{
    background: red;
    padding:5px 20px;
    border:none;
    border-radius:5px;
    color:white;
    float:right;
    box-shadow: -10px 5px 5px rgba(48, 41, 46, 0.5);
}

.card{
    background: rgb(245, 241, 241);
    width:350px;
    margin:10px;
    min-height:350px;
    padding-bottom:20px;
    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;

}
 /* globel message */
.global-msg{
    background-color: rgb(62, 62, 233);
    color:white;
    padding:10px 0;
    /* margin:10px; */
}

.container{
    width:80%;
    margin:auto;
}
h3{
    text-transform: uppercase;
    color:darkmagenta;
}

.global-msg .container{
    display:flex;
    justify-content: space-between;

}
.icons i {
   font-size:20px;
   margin-left:10px;
}

/* header */
.header {
    background-color: whitesmoke;
    
}
.menu {
    display: flex;
    justify-content: space-between;
    align-items:center;
    font-size:20px;
    
}
.menu ul{
    list-style-type:none;
    display:flex;
    
}
.menu ul li{
    margin-left:16px;
    cursor:pointer;       
}
.menu ul li:hover{
    color:blueviolet
}
.menu i {
    display:none;
}

.logo{
    font-family: 'Neonderthaw', cursive;
    color:crimson;
}

.hero{
    background:url(./assets/mountain.jfif)no-repeat center;
    min-height: 75vh;
    background-size: cover;
    display:flex;
    justify-content: center;
    align-items:center;

}
.hero-content{
    background-color: black;
    opacity:0.7;
    color:white;
    padding: 10px 30px;
    text-align:center;
    border-radius: 5px;
    box-shadow: 0 0 10px 5px gray;
    
}

/* latest posts */

/* .latest{
    display:flex;
    flex-direction: row;
} */

.latest-section{
    margin-top:60px;
}

.latest article{
    margin-top: 70px;
}



.latest-content{
    display:flex;
    flex-direction: row;
}
.latest{
    width:60%;

}
.post-content{
    display:flex;
    flex-direction: row;


}
.post-content img{
    width:180px;
    height:200px;
    border:1px solid rgba(190, 187, 187, 0.589);
    border-radius:5px;
    box-shadow: -10px 10px 15px 5px rgba(110, 100, 108, 0.5)
}
.info {
    margin:0 20px;
}
 date{
     background:rgba(191, 191, 199, 0.295);
     padding:5px 10px;
     border-radius: 5px;
     font-size:10px;
    

 }
 .links{
     background: rgba(224, 222, 222, 0.3);
     width:30%;
     border-radius: 5px;
     padding:32px 16px;

 }
 .by-country{
     margin-top:64px;
 }

 /* recommendation */

 .rec{
     margin-top:64px;

 }

 .rec-content{
     display:flex;

 }

 .rec-content img{
     width:100%;
 }

 .subscribe{
     background: rgb(235, 187, 187);
     margin:64px auto;
     min-height:200px;
     border-radius: 5px;
     text-align: center;
     padding-top: 32px;

 }

 .subscribe input{
     padding: 10px;
     border:none;
     line-height:20px;
 }

 [type="submit"]{
     background: rgb(214, 98, 98);
     border-radius: 5px 10px;
     border-top-left-radius: 130px ;
 }

 .footer {
     background: rgb(19, 17, 17);
     padding:64px 0;
     color:rgb(238, 230, 230);
     text-align:center;
 }

 /* media query */
 @media (max-width:768px){

    .menu {
        height:62px;
    }

    .menu ul {
        display:none;
        
    }

    .menu i {
        display:block;
    }

    .latest-content {
        display:flex;
        flex-direction:column ;
    }
    .latest {
        width:100%;
    }
    .links {
        width:100%;
        margin-top:48px;

        display:flex;
        justify-content: space-between;
    }

    .by-country {
        margin-top:0;
    }

    .rec-content{
        display:flex;
        flex-direction: column;
        gap:20px;
    }
    /* .card {
        margin-top: 5px;
    } */
 }

 @media (max-width:480px){
     .post-content{
         display:flex;
         flex-direction: column;

     }

     .post-content img{
         width:100%;
         margin-bottom:32px;
     }
     .latest article {
         margin-top:115px;

     }
     .links{
         display:flex;
         flex-direction: column;
         text-align:center;

     }
     /* .latest-section h3 {
         margin-bottom: -5px;
     } */

     .subscribe form{
         display:flex;
         flex-direction:column;
         padding:16px;

     }

     .subscribe form input{
         margin-bottom: 30px;
     }




 }






   

